--- a/.github/workflows/update_emails.yml
+++ b/.github/workflows/update_emails.yml
@@ -28,13 +28,39 @@ jobs:
 
       - name: Create Folders and Move Files
         run: |
-          bases=("bharathbansal@gmail.com" "bharathbansal@outlook.com" "bharathbansal@yahoo.com" "bharathbansal@hotmail.com" "bharathbansal@aol.com" "bharathbansal@icloud.com" "bharathbansal@proton.me" "bharathbansal@gmx.com")
-          for base in "${bases[@]}"; do
+          bases=$(python -c "
+import yaml
+
+with open('config.yaml', 'r') as f:
+    config = yaml.safe_load(f)
+    
+bases = [
+    config['gmail_base'],
+    config['outlook_base'],
+    config['popular_domains']['yahoo_base'],
+    config['popular_domains']['hotmail_base'],
+    config['popular_domains']['aol_base'],
+    config['popular_domains']['icloud_base'],
+    config['popular_domains']['proton_base'],
+    config['popular_domains']['gmx_base']
+]
+
+for base in bases:
+    print(base)
+          ")
+          for base in ${bases[@]}; do
             domain=$(echo $base | cut -d '@' -f 2 | cut -d '.' -f 1)
             if [ ! -d "$domain" ]; then
               mkdir $domain
             fi
             file_name=$(echo $base | sed 's/@/_/g')_emails.txt
+            if [ -f "$domain/$file_name" ]; then
+              counter=1
+              while [ -f "$domain/$(echo $base | sed 's/@/_/g')_emails_$counter.txt" ]; do
+                counter=$((counter + 1))
+              done
+              file_name=$(echo $base | sed 's/@/_/g')_emails_$counter.txt
+            fi
             if ls $file_name 1> /dev/null 2>&1; then
               mv $file_name $domain/
             fi
