--- a/.github/workflows/update_emails.yml
+++ b/.github/workflows/update_emails.yml
@@ -33,10 +33,10 @@ jobs:
 
       - name: Commit and Push Changes
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "Update generated emails"
-          git push origin main
+          git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/deswafyfxd/Plus-emails.git
