--- a/.github/workflows/update_emails.yml
+++ b/.github/workflows/update_emails.yml
@@ -40,5 +40,9 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -m "Update generated emails"
-          git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/deswafyfxd/Plus-emails.git HEAD:main
+          if ! git diff-index --quiet HEAD; then
+            git commit -m "Update generated emails [skip ci]"
+            git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/deswafyfxd/Plus-emails.git HEAD:main
+          else
+            echo "No changes to commit"
+          fi
