--- a/.github/workflows/update_emails.yml
+++ b/.github/workflows/update_emails.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install faker pyyaml
+          pip install faker pyyaml requests
 
       - name: Generate Emails
         run: |
@@ -34,15 +34,25 @@ jobs:
           python move_files.py
 
       - name: Commit and Push Changes
+        if: github.event_name != 'workflow_dispatch'
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
-          if ! git diff-index --quiet HEAD; then
-            git commit -m "Update generated emails [skip ci]"
-            git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/deswafyfxd/Plus-emails.git HEAD:main
+          if [ "${{ secrets.PUSH_TO_GITHUB }}" == "true" ]; then
+            git config --global user.name "github-actions[bot]"
+            git config --global user.email "github-actions[bot]@users.noreply.github.com"
+            git add .
+            if ! git diff-index --quiet HEAD; then
+              git commit -m "Update generated emails [skip ci]"
+              git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/deswafyfxd/Plus-emails.git HEAD:main
+            else
+              echo "No changes to commit"
+            fi
           else
-            echo "No changes to commit"
+            echo "Pushing to GitHub is disabled"
           fi
+
+      - name: Send to Discord
+        if: always()
+        run: |
+          python send_to_discord.py
